--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding: # Look at documentation for branding options/requirements. These are m
 inputs:
   input-one:  
     description: 'Description of input-one'
-    required: true
+    required: false
     default: 'default value goes here'
   input-two:
     description: 'Description of input-two'
