--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,17 @@ jobs:
     - name: Verify that the Docker image for the action builds
       run: docker build . --file Dockerfile
 
-# You might consider adding a step here that actually
-# executes the GitHub Action you are testing (version in the main branch),
-# along with any steps necessary to verify output is correct.
+    - name: Integration test
+      id: integration
+      uses: ./
+      with:
+        input-one: something
+        input-two: true
+
+    - name: Output the outputs of the integration test of the action
+      run: |
+        echo "output-one = ${{ steps.integration.outputs.output-one }}"
+        echo "output-two = ${{ steps.integration.outputs.output-two }}"
+
+    - name: Verify integration test results
+      run: python3 -u -m unittest tests/integration.py
